@@ -11,6 +11,7 @@ To do:
 		* idle mode and STOP improved but problems with ON key
 	- fixed grayscale routines: they are now rock-stable !
 	- fixed grayscales with HW2
+	- implemented 'increment rate' of $600017 port
 
 - 03/01/2005, version 1.80i: roms
 	- implemented new method for grayscale computing & management (idea from Kevin)
